--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
         <p>Desenvolvido por Ana Lu</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <p>Eu adoro <span class="destaque">chocolate</span>!</p>
 </body>
