--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gráfico de pet</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
+    <title>Gráfico de Barras</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
 <body>
     <header>
-        <h1>Relatório da contagem de pet</h1>
+        <h1>Diciplinas favorita dos alunos do Helena Kolody</h1>
         <nav>
-            <a href="index.html">Mundo</a>
-            <a href="#">Minha clinica</a>
+            <a href="index.html">Inicio</a>
+            <a href="#">Minha escola</a>
         </nav>
     </header>
     <main class="graficos-section">
-        <section id="graficos-container" class="graficos-container">
-            <!-- crie os gráficos aqui -->
+        <section id="graficos-container"
+        class="graficos-container">
+        <!-- Id: 002 -->
+        <p class="graficos-container_texto">
+            cada estudante tem sua diciplina favorita e hoje em dia podendo ter mais de <strong class="spant">12  diciplinas</strong> no dia a dia, e muito mais.
+            </p>
         </section>
     </main>
+    <div class="container8">
+        <h1 style="color: #ffc0cb;">Grafico de pets mais vendidos no mês</h1>
+        <div class="content">
+            <canvas id="myChart" width="800" height="400"></canvas>
+        </div>
+    </div>
     <footer>
-        <p>Desenvolvido por Ana Lu</p>
+        <p>Desenvolvido por Ana Luiza Borges Melo</p>
     </footer>
-</footer>
-<script type="module" src="graficos/common.js"></script>
-<script type="module" src="graficos/informacoesGlobais.js"></script>
-<script type="module" src="graficos/quantidadeUsuarios.js"></script>
-    <script type="module" src="graficos/informacoesGlobais.js"></script>
-    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
-
-    <p>Eu adoro <span class="destaque">chocolate</span>!</p>
+    <script src="script.js"></script>
 </body>
+</html>
