--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Diciplinas favorita dos alunos do Helena Kolody</h1>
+        <h1>Disciplinas favorita dos alunos do Helena Kolody</h1>
         <nav>
             <a href="index.html">Inicio</a>
             <a href="#">Minha escola</a>
