--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Disciplinas favorita dos alunos do Helena Kolody</h1>
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="#">Minha escola</a>
+            <a href="https://ana-mar16.github.io/pizza-ana.github.io/">Minha escola</a>
         </nav>
     </header>
     <main class="graficos-section">
