--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         class="graficos-container">
         <!-- Id: 002 -->
         <p class="graficos-container_texto">
-            cada estudante tem sua diciplina favorita e hoje em dia podendo ter mais de <strong class="spant">12  diciplinas</strong> no dia a dia, e muito mais.
+            saiba quantos animais vem se consutar na <strong>nossa clínica</strong>.
             </p>
         </section>
     </main>
